# app/router.js
@@ -1,12 +1,15 @@
 module.exports = app => {
   const { router, controller } = app;
 
-  router.post('/users/signup', controller.userController.signup);
-  router.post('/users/login', controller.userController.login);
-  router.get('/users/me', controller.userController.getUser);
-  router.post('/users/changepassword', controller.userController.changePassword);
+  router.post('/users/signup', controller.usersController.signup);
+  router.post('/users/login', controller.usersController.login);
+  router.get('/users/me', controller.usersController.getUser);
+  router.post('/users/changepassword', controller.usersController.changePassword);
 
   router.resources('/stations', controller.stationsController);
+  router.resources('/buses', controller.busesController);
+
+  router.resources('/routes', controller.routesController);
 
   router.get('/public/documentation', controller.documentationController.index);
 };
