# app/service/routesService.js
@@ -1,0 +1,11 @@
+const BaseService = require('./base/baseService');
+
+class RoutesService extends BaseService {
+  constructor(ctx) {
+    super(ctx);
+    this.model = ctx.model.Routes;
+    this.name = 'route';
+  }
+}
+
+module.exports = RoutesService;
