# app/validation/index.js
@@ -1,7 +1,11 @@
 const usersValidation = require('./users');
 const stationsValidation = require('./stations');
+const busesValidation = require('./buses');
+const routesValidation = require('./routes');
 
 module.exports = {
   usersValidation,
   stationsValidation,
+  busesValidation,
+  routesValidation,
 };
